# RL-pytorch

./: .gitignore  LICENSE  README.md  collect_demo.py  example.py  plot.py  pyproject.toml  requirements.txt  run_il.py  run_rl.py  setup.py  train_active_il.py  train_agent.py  train_expert.py  train_il.py
algo/: __init__.py  base.py
algo/imitation/: airl.py  base.py  bc.py  bc2.py  dagger.py  gail.py
conf/: _collect_demo.yaml  _exp_config.yaml  _hyper_param_tuning.yaml  _rla_config.yaml  _run_exp.yaml  collect_demo.yaml  collect_pref.yaml  nni_cfg.yaml  run_exp.yaml  train_agent.yaml
config/: _common.yml  _template.yml  airl.yml  bc.yml  bc2.yml  dagger.yml  ddpg.yml  default.yml  gail.yml  ppo.yml  sac.yml  td3.yml  trpo.yml
data/: cartpole-v1_dqn.pt  cartpole-v1_expert.hdf5  d4rl_task.md  hopper-v4_sac.pt
example/: collect_demo.py  env_utils.py  hyper_param_tuning.py  train_agent.py
ilkit/: __init__.py
models/: ddpg_HalfCheetah-v3_0
net/: actor.py  critic.py  discriminator.py
network/: actor.py  critic.py
rla_scripts/: archive_expt.py  delete_expt.py  start_pretty_plotter.py  view_expt.py
rlbase/: __init__.py
rlpyt/: __init__.py  _base.py  _helpers.py  _onlinerl.py  ddpg.py  ddqn.py  dqn.py  dueldqn.py  ppo.py  sac.py  td3.py  trpo.py
scripts/: collect_demo.py  collect_pref.py  plot.py  train_agent.py
src/: __init__.py  base.py  ddpg.py  ddqn.py  dqn.py  dueldqn.py  ppo.py  sac.py  td3.py  trpo.py
test/: test_logger.py  test_make_agent.py
utils/: buffer.py  config.py  data.py  env.py  exp.py  gae.py  logger.py  net.py  transform.py
(+124 files in other folders)
